--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -9,10 +9,10 @@
     <script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
     <div class="page-wrapper" id="page-wrapper">
       <div class="container" id="container">
-        <h2>Journal Results</h2>
+        <h2>Account Code</h2>
         <div class="ptag-container">
           <span><a href="#"> Settlement ></a></span>
-          <span><a href="#"> Journal Results</a></span>
+          <span><a href="#"> Account Code</a></span>
           <div class="form-container">
             <div class="form-box">
               <form
