--- a/src/main/resources/templates/views/user/newPassword.html
+++ b/src/main/resources/templates/views/user/newPassword.html
@@ -57,7 +57,7 @@
 <body>
 
 <div class="form-container">
-    <form id="passwordResetForm" name="passwordResetForm" method="post" action="/submitPasswordChange" onsubmit="return false;">
+    <form id="passwordResetForm" name="passwordResetForm" onsubmit="return false;">
         <div class="row">
             <div class="col">
                 <label for="newPassword" class="form-label">새비밀번호</label>
@@ -76,6 +76,9 @@
             </div>
         </div>
     </form>
+	<form id="form" name="form" method="post" action="/menuLink">
+		<input type="hidden" id="pageName" name="pageName" />
+	</form>
 </div>
 
 <script>
@@ -89,19 +92,20 @@
         }
 
         const requestData = {
-            newPassword: newPassword,
-            confirmNewPassword: confirmNewPassword
+        	usrNewPassword: newPassword
         };
 
         $.ajax({
             type: "post",
-            url: "/submitPasswordChange",
+            url: "/auth/adamsLoginPw",
             async: true,
             dataType: "json",
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify(requestData),
             success: function (data) {
                 alert("비밀번호 변경 신청이 완료되었습니다.");
+                $("#pageName").val("login");
+                $("#form").submit();
             },
             error: function (xhr, status, error) {
                 alert("오류가 발생했습니다. 다시 시도해주세요.");
