--- a/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
@@ -161,7 +161,7 @@
       var columns = [
         {
           id: "batExeId",
-          name: "실행ID",
+          name: "Execution ID",
           field: "batExeId",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -169,7 +169,7 @@
         },
         {
           id: "batProgId",
-          name: "배치프로그램ID",
+          name: "Program ID",
           field: "batProgId",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -177,7 +177,7 @@
         },
         {
           id: "batProgNm",
-          name: "배치프로그램명",
+          name: "Program Name",
           field: "batProgNm",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -185,7 +185,7 @@
         },
         {
           id: "batExeRstCd",
-          name: "실행결과",
+          name: "Result",
           field: "batExeRstCd",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -193,7 +193,7 @@
         },
         {
           id: "batExeErrCd",
-          name: "에러코드",
+          name: "Error Code",
           field: "batExeErrCd",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -201,7 +201,7 @@
         },
         {
           id: "stdYymm",
-          name: "기준년월",
+          name: "Standard Year/Month",
           field: "stdYymm",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -209,7 +209,7 @@
         },
         {
           id: "mainEmpNo",
-          name: "주담당자",
+          name: "Main User",
           field: "mainEmpNo",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -217,14 +217,14 @@
         },
         {
           id: "regUsrid",
-          name: "실행자",
+          name: "Executor",
           field: "regUsrid",
           sortable: true,
           editor: Slick.Editors.Text,
         },
         {
           id: "regDt",
-          name: "실행일시",
+          name: "Execution Date",
           field: "regDt",
           sortable: true,
           editor: Slick.Editors.Text,
