--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -238,70 +238,63 @@
               var columns = [
                 {
                   id: "seqNo",
-                  name: "순번",
+                  name: "Seq",
                   field: "seqNo",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
-                  id: "fileNm",
-                  name: "파일명",
-                  field: "fileNm",
-                  sortable: true,
-                  editor: Slick.Editors.Text,
-                },
-                {
                   id: "tblId",
-                  name: "테이블ID",
+                  name: "Table ID",
                   field: "tblId",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
                   id: "fileNm",
-                  name: "물리파일명",
+                  name: "File Name",
                   field: "fileNm",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
                   id: "loadCnt",
-                  name: "적재건수",
+                  name: "Load Count",
                   field: "loadCnt",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
                   id: "stdYm",
-                  name: "기준년월",
+                  name: "Standard YYYY/MM",
                   field: "stdYm",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
                   id: "regUsrid",
-                  name: "등록자",
+                  name: "registrant",
                   field: "regUsrid",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
                   id: "loadStDt",
-                  name: "적재시작일시",
+                  name: "Load Start Date",
                   field: "loadStDt",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
                   id: "loadEdDt",
-                  name: "적재종료일시",
+                  name: "Load End Date",
                   field: "loadEdDt",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
                 {
                   id: "loadSuccYn",
-                  name: "적재성공여부",
+                  name: "Load Success",
                   field: "loadSuccYn",
                   sortable: true,
                   editor: Slick.Editors.Text,
