--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -427,6 +427,7 @@
         } else {
           console.error("error while loading the moda title: ");
         }
+        renewOptions(false);
 
         // Dynamically create form elements based on the columns that have editors
         const modalColumns = columns.filter((col) => col.editor);
