--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -168,7 +168,7 @@
         // {id: "fileNm", name: "파일명", field: "fileNm", sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator])},
         {
           id: unqId,
-          name: "배치프로그램ID",
+          name: "Program ID",
           field: unqId,
           sortable: true,
           editor: Slick.Editors.Text,
@@ -180,7 +180,7 @@
         },
         {
           id: "batProgNm",
-          name: "배치프로그램명",
+          name: "Program Name",
           field: "batProgNm",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -188,7 +188,7 @@
         },
         {
           id: "upProgId",
-          name: "상위프로그램ID",
+          name: "Group Name",
           field: "upProgId",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -200,7 +200,7 @@
         },
         {
           id: "exePrd",
-          name: "실행주기",
+          name: "Cycle",
           field: "exePrd",
           sortable: true,
           editor: function (args) {
@@ -213,7 +213,7 @@
         },
         {
           id: "mainEmpNo",
-          name: "주사용자번호",
+          name: "Main User",
           field: "mainEmpNo",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -225,7 +225,7 @@
         },
         {
           id: "subEmpNo",
-          name: "부사용자번호",
+          name: "Sub User",
           field: "subEmpNo",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -237,14 +237,14 @@
         },
         {
           id: "regUsrid",
-          name: "등록사용자ID",
+          name: "Registrant",
           field: "regUsrid",
           sortable: true,
           editor: Slick.Editors.Text,
         },
         {
           id: "regDt",
-          name: "등록일",
+          name: "Registration Date",
           field: "regDt",
           sortable: true,
           editor: Slick.Editors.Text,
@@ -471,6 +471,7 @@
         } else {
           console.error("error while loading the moda title: ");
         }
+        renewOptions(false);
 
         // Dynamically create form elements based on the columns that have editors
         const modalColumns = columns.filter((col) => col.editor);
