--- a/src/main/resources/templates/fragments/icon.html
+++ b/src/main/resources/templates/fragments/icon.html
@@ -1,48 +1,96 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 	<th:block th:fragment="101000000">
-								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-									<path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
-									<path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
-									<path d="M15 15l3.35 3.35" />
-									<path d="M9 15l-3.35 3.35" />
-									<path d="M5.65 5.65l3.35 3.35" />
-									<path d="M18.35 5.65l-3.35 3.35" />
-								</svg>
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-files">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M15 3v4a1 1 0 0 0 1 1h4" />
+			<path d="M18 17h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h4l5 5v7a2 2 0 0 1 -2 2z" />
+			<path d="M16 17v2a2 2 0 0 1 -2 2h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h2" />
+		</svg>
 	</th:block>
 	<th:block th:fragment="102000000">
-								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-									<path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" />
-									<path d="M12 12l8 -4.5" />
-									<path d="M12 12l0 9" />
-									<path d="M12 12l-8 -4.5" />
-									<path d="M16 5.25l-8 4.5" />
-								</svg>
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-stopwatch">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M5 13a7 7 0 1 0 14 0a7 7 0 0 0 -14 0z" />
+			<path d="M14.5 10.5l-2.5 2.5" />
+			<path d="M17 8l1 -1" />
+			<path d="M14 3h-4" />
+		</svg>
+
 	</th:block>
 	<th:block th:fragment="201000000">
-								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-									<path d="M4 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-									<path d="M4 13m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-									<path d="M14 4m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-									<path d="M14 15m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v1a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" />
-								</svg>
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-abacus">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M5 3v18" />
+			<path d="M19 21v-18" />
+			<path d="M5 7h14" />
+			<path d="M5 15h14" />
+			<path d="M8 13v4" />
+			<path d="M11 13v4" />
+			<path d="M16 13v4" />
+			<path d="M14 5v4" />
+			<path d="M11 5v4" />
+			<path d="M8 5v4" />
+			<path d="M3 21h18" />
+		</svg>
+	</th:block>
+	<th:block th:fragment="202000000">
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-tournament">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M4 4m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+			<path d="M20 10m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+			<path d="M4 12m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+			<path d="M4 20m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+			<path d="M6 12h3a1 1 0 0 1 1 1v6a1 1 0 0 1 -1 1h-3" />
+			<path d="M6 4h7a1 1 0 0 1 1 1v10a1 1 0 0 1 -1 1h-2" />
+			<path d="M14 10h4" />
+		</svg>
+	</th:block>
+	<th:block th:fragment="203000000">
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-vocabulary">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M10 19h-6a1 1 0 0 1 -1 -1v-14a1 1 0 0 1 1 -1h6a2 2 0 0 1 2 2a2 2 0 0 1 2 -2h6a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-6a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2z" />
+			<path d="M12 5v16" />
+			<path d="M7 7h1" />
+			<path d="M7 11h1" />
+			<path d="M16 7h1" />
+			<path d="M16 11h1" />
+			<path d="M16 15h1" />
+		</svg>
+	</th:block>
+	<th:block th:fragment="204000000">
+		<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-stethoscope">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M6 4h-1a2 2 0 0 0 -2 2v3.5h0a5.5 5.5 0 0 0 11 0v-3.5a2 2 0 0 0 -2 -2h-1" />
+			<path d="M8 15a6 6 0 1 0 12 0v-3" />
+			<path d="M11 3v2" />
+			<path d="M6 3v2" />
+			<path d="M20 10m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+		</svg>
 	</th:block>
 	<th:block th:fragment="801000000">
-								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-									<path d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7" />
-									<path d="M10 10l.01 0" />
-									<path d="M14 10l.01 0" />
-									<path d="M10 14a3.5 3.5 0 0 0 4 0" />
-								</svg>
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-adjustments-horizontal">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M14 6m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+			<path d="M4 6l8 0" />
+			<path d="M16 6l4 0" />
+			<path d="M8 12m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+			<path d="M4 12l2 0" />
+			<path d="M10 12l10 0" />
+			<path d="M17 18m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+			<path d="M4 18l11 0" />
+			<path d="M19 18l1 0" />
+		</svg>
 	</th:block>
 	<th:block th:fragment="901000000">
-								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-									<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-									<path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
-								</svg>
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-devices-2">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M10 15h-6a1 1 0 0 1 -1 -1v-8a1 1 0 0 1 1 -1h6" />
+			<path d="M13 4m0 1a1 1 0 0 1 1 -1h6a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-6a1 1 0 0 1 -1 -1z" />
+			<path d="M7 19l3 0" />
+			<path d="M17 8l0 .01" />
+			<path d="M17 16m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+			<path d="M9 15l0 4" />
+		</svg>
 	</th:block>
 </html>
