--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,12 +6,12 @@
 		<title>파일업로드</title>
 		
 		<link rel="stylesheet" href="css/jquery-ui-1.13.3/jquery-ui.css" type="text/css" />
-		
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick-alpine-theme.css" type="text/css" />
+
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick-alpine-theme.css" type="text/css" />
-		
+
 		<!-- // tabler framework css files import -->
 		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
 		<link href="css/css-tabler/tabler-flags.min.css?1692870487" rel="stylesheet" />
@@ -22,12 +22,11 @@
 		<!-- // custom css for this page -->
 		<link href="css/file-css.css" rel="stylesheet" />
 		<link href="css/common-css.css" rel="stylesheet" />
-
+		
+	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" ></script>
+	    
 		<script src="js/jquery-3.7.1.min.js"></script>
 		<script src="js/jquery-ui.min.js"></script>
-		<script src="js/xlsx.full.min.js"></script>
-		<script src="js/utils.js" defer></script>
-		<script src="js/common.js"></script>
 		
 		<script src="js/slickgrid/lib/jquery.event.drag-2.3.0.js"></script>
 		<script src="js/slickgrid/dist/browser/slick.core.js"></script>
@@ -45,6 +44,7 @@
 		<script src="js/slickgrid/dist/browser/plugins/slick.rowselectionmodel.js"></script>
 		<script src="js/slickgrid/dist/browser/slick.compositeeditor.js"></script>
 		<script src="js/slickgrid/dist/browser/controls/slick.pager.js"></script>
+		<script src="js/xlsx.full.min.js"></script>
 		
 		<!-- <script src="js/js-tabler/demo-theme.min.js?1692870487"></script> -->
 		<script src="js/js-tabler/tabler.min.js?1692870487" defer></script>		
@@ -52,7 +52,8 @@
 		<script src="js/libs-tabler/jsvectormap/dist/js/jsvectormap.min.js?1692870487" defer></script>
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world.js?1692870487" defer></script>
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world-merc.js?1692870487" defer></script>
-        
+        <script src="js/utils.js" defer></script>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
 		<style>
