--- a/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
@@ -31,7 +31,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/WRKBAT003M0SelectList"
+                action="/call/WRKBAT003M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -134,7 +134,7 @@
       }
 
       function getFile(input) {
-        return parentGetFile(input, "/WRKBAT003M0SelectList");
+        return parentGetFile(input, "/call/WRKBAT003M0SelectList");
       }
     </script>
     <script>
