--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -19,7 +19,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/BIZJNL001M0SelectList"
+                action="/call/BIZJNL001M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -139,19 +139,19 @@
       }
 
       function getFile(input) {
-        return parentGetFile(input, "/BIZJNL001M0SelectList");
+        return parentGetFile(input, "/call/BIZJNL001M0SelectList");
       }
 
       function insertFile(addedRow) {
-        parentInsertFile(addedRow, "/BIZJNL001M0InsertList");
+        parentInsertFile(addedRow, "/call/BIZJNL001M0InsertList");
       }
 
       function updateFile(updatedRow) {
-        parentUpdateFile(updatedRow, "/BIZJNL001M0UpdateList");
+        parentUpdateFile(updatedRow, "/call/BIZJNL001M0UpdateList");
       }
 
       function deleteFile(todeleteRow) {
-        parentDeleteFile(todeleteRow, "/BIZJNL001M0DeleteList");
+        parentDeleteFile(todeleteRow, "/call/BIZJNL001M0DeleteList");
       }
     </script>
     <script>
