--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -19,7 +19,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/WRKFIL001M0SelectList"
+                action="/call/WRKFIL001M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
@@ -141,19 +141,19 @@
       }
 
       function getFile(input) {
-        return parentGetFile(input, "/WRKFIL001M0SelectList");
+        return parentGetFile(input, "/call/WRKFIL001M0SelectList");
       }
 
       function insertFile(addedRow) {
-        parentInsertFile(addedRow, "/WRKFIL001M0InsertList");
+        parentInsertFile(addedRow, "/call/WRKFIL001M0InsertList");
       }
 
       function updateFile(updatedRow) {
-        parentUpdateFile(updatedRow, "/WRKFIL001M0UpdateList");
+        parentUpdateFile(updatedRow, "/call/WRKFIL001M0UpdateList");
       }
 
       function deleteFile(todeleteRow) {
-        parentDeleteFile(todeleteRow, "/WRKFIL001M0DeleteList");
+        parentDeleteFile(todeleteRow, "/call/WRKFIL001M0DeleteList");
       }
     </script>
     <script src="js/utils.js"></script>
